# geditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: dll.cpp  dll.h  main.cpp  test.cpp
example/parser/: GrammerParser.h  JsonWalker.h  Lexer.h  ParserBuilder.h  main.cpp
platform/qt/: CMakeLists.txt  QGEditor.cpp  QGEditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  auto_complete.cpp  auto_complete.h  caret_manager.cpp  caret_manager.h  command_queue.cpp  command_queue.h  common.h  doc_manager.cpp  doc_manager.h  document.cpp  document.h  event.cpp  event.h  geditor.cpp  geditor.h  glexer.cpp  glexer.h  keymap.cpp  keymap.h  layout.cpp  layout.h  lexer.cpp  lexer.h  line_index.cpp  line_index.h  main.cpp  margin.cpp  margin.h  memory.cpp  memory.h  open_visitor.cpp  open_visitor.h  paint_manager.cpp  paint_manager.h  parser.cpp  parser.h  table.cpp  table.h  text_buffer.cpp  (+3 more)
